@@ -1,3 +1,11 @@
+2001-08-26  Yanko Kaneti <yaneti@declera.com>
+
+	* POTFILES.in: update, according to recent changes
+	remove: src/main.c, src/print.c, src/ui.c
+	add: devhelp.desktop.in, src/books-dialog.c, src/bookshelf.c,
+	src/devhelp-window.c, src/GNOME_DevHelp.oaf.in, src/install.c, 
+	src/main.c, src/preferences.c
+
 2001-08-14  Valek Filippov <frob@df.ru>
 
 	* ru.po: added russian translation.
